# ml-prudential-lifeinsurance

./: README.md  kappa.ipynb  main.py  model.ipynb  pyproject.toml  sample_train.csv
